# naturalness-utility

./: .dockerignore  .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config-optional-linting.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  changelog.md  pyproject.toml  pytest.ini  settings.yaml
.gitlab/: renovate.json
.gitlab/issue_templates/: Default.md  Feature_Request.md
.gitlab/merge_request_templates/: Default.md
app/: api.py
app/route/: common.py  health.py  imagery.py
conf/: NDVI_evalscript.js  WATER_evalscript.js  ndvi_evalscript.js
conf/eval_scripts/: NATURALNESS.js  NDVI.js  WATER.js
datafusion/: imagery_store_operator.py
naturalness/: __init__.py  exception.py  imagery_store_operator.py
test/: conftest.py
test/app/: test_api.py
test/app/route/: test_common.py  test_health.py  test_imagery.py
test/datafusion/: test_imagery_store_operator.py
test/naturalness/: test_imagery_store_operator.py
test/resources/sentinelhub_cache/1a34b0f98c3d679a4453ba2b5918d090/: request.json  response.tiff
test/resources/sentinelhub_cache/2f91f2e4e87888ce70f0c1527f25f2d2/: request.json  response.tiff
test/resources/sentinelhub_cache/38cbac6f786313ebd392bb675a7def3e/: request.json  response.tiff
test/resources/sentinelhub_cache/5a71b3c5b43f93c7916ce09ad0b2d0a2/: request.json  response.tiff
test/resources/sentinelhub_cache/6ff1319376b9ab8eba39d592b92df41b/: request.json  response.tiff
test/resources/sentinelhub_cache/84be985c8c20f42a16700635a8dc7a70/: request.json  response.tiff
test/resources/sentinelhub_cache/895b6ff1ed6ddb168ec905b5390bf470/: request.json  response.tiff
test/resources/sentinelhub_cache/d80db1f729e7b3bce7882db20a0d61b6/: request.json  response.tiff
test/test_data/: test_raster.tiff  test_vector.geojson
