[tool.poetry]
name = "naturalness"
version = "0.1.0"
description = "This utility provides the functionality of different indices derived from remote sensing data"
authors = [
    "anna.buch <anna.buch@uni-heidelberg.de>",
    "Maciej Adamiak <maciej.adamiak@heigit.org>",
    "Moritz Schott <moritz.schott@heigit.org>"
]
readme = "README.md"
repository = "http://git@gitlab.heigit.org:2022/climate-action/utilities/naturalness-utility"

[tool.poetry.dependencies]
python = "~3.11.5"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sentinelhub = "^3.10.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.7.1"
geojson-pydantic = "^1.2.0"
rasterio = "^1.3.10"
rasterstats = "^0.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
