[tool.poetry]
name = "naturalness"
version = "1.1.0"
description = "This utility provides the functionality of different indices derived from remote sensing data"
authors = [
    "Danielle Gatland <danielle.gatland@heigit.org>",
    "Moritz Schott <moritz.schott@heigit.org>",
    "Anna Buch <anna.buch@uni-heidelberg.de>",
    "Maciej Adamiak <maciej.adamiak@heigit.org>",
    "Christina Ludwig <christina.ludwig@heigit.org>"
]
readme = "README.md"
repository = "https://git@gitlab.heigit.org:2022/climate-action/utilities/naturalness-utility"

[tool.poetry.dependencies]
python = "~3.13.0"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
sentinelhub = "^3.10.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.7.1"
geojson-pydantic = "~2.0"
rasterio = "^1.3.10"
rasterstats = "^0.20.0"
pyyaml = "^6.0.2"
semver = "^3.0.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
httpx = "^0.28.1"
responses = "^0.25.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
markers = [
    "external: marks tests that potentially make external API calls (deselect with '-m \"not external\"')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
