[tool.poetry]
name = "naturalness"
version = "1.1.1"
description = "This utility provides the functionality of different indices derived from remote sensing data"
authors = [
    "Danielle Gatland <danielle.gatland@heigit.org>",
    "Moritz Schott <moritz.schott@heigit.org>",
    "Anna Buch <anna.buch@uni-heidelberg.de>",
    "Maciej Adamiak <maciej.adamiak@heigit.org>",
    "Christina Ludwig <christina.ludwig@heigit.org>"
]
readme = "README.md"
repository = "https://git@gitlab.heigit.org:2022/climate-action/utilities/naturalness-utility"

[tool.poetry.dependencies]
python = "~3.13.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
sentinelhub = "^3.10.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.7.1"
geojson-pydantic = "~2.1.0"
rasterio = "^1.3.10"
rasterstats = "^0.20.0"
pyyaml = "^6.0.2"
semver = "^3.0.4"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
responses = "^0.25.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select = [
    # defaults
    "F",
    "E4", "E7", "E9",
    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions
    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",
    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*"]

[tool.pytest]
markers = [
    "external: marks tests that potentially make external API calls (deselect with '-m \"not external\"')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
